product get and find product and swagger to show get one product
