# src/feature/product/routes/product.routes.js
@@ -1,13 +1,16 @@
 import express from "express";
-import {addProduct,getAllProducts,getOneProduct,rateProductData} from "../controller/product.controller.js";
+import {addProduct,getAllProducts,getOneProduct,rateProductData,filterProducts} from "../controller/product.controller.js";
 
 const productRouter = express.Router();
 
 //get routes
 productRouter.get("/", getAllProducts);
-productRouter.get("/:id", getOneProduct);
+
 //post routes
 productRouter.post("/add", addProduct);
 productRouter.post("/rate", rateProductData);
+
+//product get product
+productRouter.get("/:id", getOneProduct);
 
 export default productRouter;
